# tmig

./: .editorconfig  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: camera.hpp  ebo.hpp  entity.hpp  mesh.hpp  scene.hpp  shader.hpp  structs.hpp  vao.hpp  vbo.hpp  window.hpp
include/gl/: ebo.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
include/tmig/: camera.hpp  entity.hpp  glm.hpp  gmesh.hpp  init.hpp  light.hpp  mesh.hpp  scene.hpp  structs.hpp  utils.hpp  window.hpp
include/tmig/core/: callback_manager.hpp  input.hpp  light_manager.hpp  non_copyable.hpp
include/tmig/gl/: ebo.hpp  gl.hpp  gl_object.hpp  shader.hpp  texture.hpp  texture_cube.hpp  vao.hpp  vbo.hpp
include/tmig/physics/: rigid-body.hpp  rigid_body.hpp
include/tmig/physics/collision/: collider.hpp  collision_test.hpp  mesh_collider.hpp  sphere_collider.hpp
include/tmig/render/: camera.hpp  data_buffer.hpp  data_buffer.inl  entity.hpp  framebuffer.hpp  gmesh.hpp  instanced_mesh.hpp  instanced_mesh.inl  internal.hpp  light.hpp  mesh.hpp  mesh.inl  render.hpp  scene.hpp  shader.hpp  texture2D.hpp  ui.hpp  uniform_buffer.hpp  uniform_buffer.inl  vertex_attribute.hpp  window.hpp
include/tmig/render/gl/: ebo.hpp  gl_object.hpp  shader.hpp  texture.hpp  texture_cube.hpp  vao.hpp  vbo.hpp
include/tmig/render/postprocessing/: bloom.hpp  blur.hpp  effect.hpp
include/tmig/render/utils/: primitives_gmesh.hpp  primitives_mesh.hpp  shaders.hpp  skybox.hpp
include/tmig/util/: camera.hpp  camera_controller.hpp  color.hpp  debug.hpp  file.hpp  log.hpp  postprocessing.hpp  resources.hpp  shapes.hpp  time_step.hpp
include/tmig/utils/: primitives.hpp  primitives_gmesh.hpp  primitives_mesh.hpp  shaders.hpp  skybox.hpp
include/utils/: primitives.hpp  shaders.hpp  skybox.hpp  sphere.hpp
resources/engine/shaders/: bloom_bright_pass.frag  bloom_output.frag  blur.frag  screen_quad.frag  screen_quad.vert
resources/shaders/: base.frag  bloom.frag  blur.frag  bright_pass.frag  entity.vs  entity_frag_shader.glsl  entity_vert_shader.glsl  fragment_shader.glsl  fragment_shader2.glsl  instanced.frag  instanced.vert  instanced_bloom.frag  instanced_lighting.frag  instanced_lighting.vert  lighting.frag  lighting.vert  no_tex_frag_shader.glsl  non_instanced.frag  non_instanced.vert  post_processing.frag  skybox_frag_shader.glsl  skybox_vert_shader.glsl  vertex_shader.glsl
src/: camera.cpp  ebo.cpp  entity.cpp  gmesh.cpp  init.cpp  light.cpp  mesh.cpp  scene.cpp  shader.cpp  vao.cpp  vbo.cpp  window.cpp
src/core/: callback_manager.cpp  input.cpp  light_manager.cpp
src/gl/: ebo.cpp  gl.cpp  shader.cpp  texture.cpp  texture_cube.cpp  vao.cpp  vbo.cpp
src/physics/: rigid-body.cpp  rigid_body.cpp
src/physics/collision/: collision_test.cpp  mesh_collider.cpp  sphere_collider.cpp
src/render/: camera.cpp  entity.cpp  framebuffer.cpp  gmesh.cpp  light.cpp  render.cpp  scene.cpp  shader.cpp  texture2D.cpp  ui.cpp  vertex_attribute.cpp  window.cpp
src/render/gl/: ebo.cpp  shader.cpp  texture.cpp  texture_cube.cpp  vao.cpp  vbo.cpp
src/render/postprocessing/: bloom.cpp  blur.cpp
src/render/utils/: primitives_gmesh.cpp  primitives_mesh.cpp  shaders.cpp  skybox.cpp
src/util/: camera.cpp  camera_controller.cpp  debug.cpp  file.cpp  postprocessing.cpp  resources.cpp  shapes.cpp  time_step.cpp
src/utils/: primitives.cpp  primitives_gmesh.cpp  primitives_mesh.cpp  shaders.cpp  skybox.cpp  sphere.cpp
tests/: assimp_test.cpp  bloom.cpp  framebuffer.cpp  instanced.cpp  lights.cpp  main.cpp  non_instanced.cpp  rigid-body.cpp  rigid_body.cpp  scene-test.cpp  scene_test.cpp
